Fixed username and indentation

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@ subtitle: Don't just read about what OpenShift 3 can do — try it for yourself 
 ---
 
 <section id="main-content">
+    <h3>
+        <a id="www-default" class="anchor" href="www-default/workshop-index.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>Access the Online Workshop Here</a>
+    </h3>
 
     <h3>
-<a id="www-default" class="anchor" href="www-default/workshop-index.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>Access the Online Workshop Here</a></h3>
+        <a id="www-offline" class="anchor" href="www-offline/workshop-index.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>Access the Offline Workshop Here</a>
+    </h3>
 
     <h3>
-<a id="www-offline" class="anchor" href="www-offline/workshop-index.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>Access the Offline Workshop Here</a></h3>
-    <h3>
-<a id="who-should-attend" class="anchor" href="#who-should-attend" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Who should attend</h3>
-
+        <a id="who-should-attend" class="anchor" href="#who-should-attend" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Who should attend
+    </h3>
     <ul>
         <li>Architects</li>
         <li>Developers</li>
@@ -22,8 +24,8 @@ subtitle: Don't just read about what OpenShift 3 can do — try it for yourself 
     </ul>
 
     <h3>
-<a id="what-you-will-learn" class="anchor" href="#what-you-will-learn" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What you will learn</h3>
-
+        <a id="what-you-will-learn" class="anchor" href="#what-you-will-learn" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What you will learn
+    </h3>
     <ul>
         <li>Cloud and container fundamentals</li>
         <li>How OpenShift Enterprise uses containers to speed up development</li>
@@ -31,8 +33,8 @@ subtitle: Don't just read about what OpenShift 3 can do — try it for yourself 
     </ul>
 
     <h3>
-<a id="create-in-the-hands-on-lab" class="anchor" href="#create-in-the-hands-on-lab" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Create in the hands-on lab</h3>
-
+        <a id="create-in-the-hands-on-lab" class="anchor" href="#create-in-the-hands-on-lab" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Create in the hands-on lab
+    </h3>
     <ul>
         <li>Learn the basics of installing an Openshift 3 environment</li>
         <li>Easily build containers from source code</li>
